<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/startMap"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.fragment.CorrectionFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/md_theme_primary"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_gravity="center"
                    android:id="@+id/correctionInfoView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/locationInstructions"
                    android:textAppearance="?attr/textAppearanceBodyLarge"
                    android:textColor="@color/md_theme_onPrimary"
                    android:textAlignment="center"/>
            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/startLocationDone"
                android:layout_width="150dp"
                android:layout_height="56dp"
                android:layout_marginBottom="24dp"
                android:text="@string/setLocation"
                android:textSize="24sp"
                app:icon="@drawable/ic_baseline_add_location_24"
                app:iconGravity="start"
                app:iconSize="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/trajectoryNameLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:hintEnabled="true"
                app:helperText="@string/trajectory_name_helper"
                app:layout_constraintBottom_toTopOf="@id/startLocationDone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/trajectoryNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trajectory_name_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences"
                    android:maxLength="60"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</RelativeLayout>
